Al1 layout issue fix

--- a/src/app/activities/al1/al1.component.scss
+++ b/src/app/activities/al1/al1.component.scss
@@ -75,7 +75,7 @@
 	border-style: solid;
 	border-width: 2px;
 	margin: 0 20px;
-	top: 32%;
+	top: 2%;
 	padding: 5px;
 	font-size: 50px;
 	font-weight: 400;
